--- a/client/src/styles/Nav.css
+++ b/client/src/styles/Nav.css
@@ -12,7 +12,7 @@ li.nav-item {
   text-decoration: none;
   color: white;
   font-family: Impact, fantasy;
-  background-color: #171A21;
+  background-color: #141B41;
   border: 1px solid white;
   border-radius: 15px;
   padding: 8px;
@@ -41,7 +41,7 @@ a:active {
 }
 
 body {
-    background-color: #171A21;
+    background-color: #141B41;
     color:white;
 }
 
