--- a/client/src/styles/WorkoutPage.css
+++ b/client/src/styles/WorkoutPage.css
@@ -39,7 +39,7 @@ iframe:hover {
 
 select.muscle-select {
   font-family: Impact, fantasy;
-  background-color: #171A21;
+  background-color: #306bac;
   border: 1px solid white;
   border-radius: 15px;
   color: white;
@@ -55,7 +55,7 @@ select.muscle-select {
   text-align: center;
   justify-content: center;
   align-items: center;
-  background-color: #7A93AC;
+  background-color: #306BAC;
   padding-top: 10px;
   padding-bottom: 10px;
   border-radius: 30px;
