--- a/client/src/styles/WorkoutPage.css
+++ b/client/src/styles/WorkoutPage.css
@@ -39,7 +39,7 @@ iframe:hover {
 
 select.muscle-select {
   font-family: Impact, fantasy;
-  background-color: #335c81;
+  background-color: #1B2845;
   border: 1px solid white;
   border-radius: 15px;
   color: white;
