--- a/client/src/styles/WorkoutPage.css
+++ b/client/src/styles/WorkoutPage.css
@@ -59,6 +59,8 @@ select.muscle-select {
   padding-top: 10px;
   padding-bottom: 10px;
   border-radius: 30px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 p.description {
