--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -4,7 +4,7 @@ body, html{
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-color:  #0a0a0b;
+  background-color:  #1B2845;
 }
 .positive__list {
     font-family: Impact, fantasy;
