home page styling

--- a/client/src/styles/signup.css
+++ b/client/src/styles/signup.css
@@ -15,7 +15,7 @@ form {
 }
 .form-input {
     font-size: 16px;
-    background-color: aquamarine;
+    background-color: #fca311;
 }
 
 .error__message {
