--- a/client/src/styles/WorkoutPage.css
+++ b/client/src/styles/WorkoutPage.css
@@ -44,7 +44,7 @@ select.muscle-select {
   border-radius:0.4rem;
   color: white;
   text-align: center;
-  max-width: 10%;
+  width: max-content;
   margin-top: 10px;
   padding: 8px;
 }
