--- a/client/src/styles/Nav.css
+++ b/client/src/styles/Nav.css
@@ -12,7 +12,7 @@ li.nav-item {
   text-decoration: none;
   color: white;
   font-family: Impact, fantasy;
-  background-color: transparent;
+  background-color: #274060;
   border: 1px solid white;
   border-radius:0.4rem;
   padding: 8px;
