--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -46,5 +46,6 @@ img.buddy-img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  height: 400px;
+  width: 400px;
 }
