--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -46,6 +46,6 @@ img.buddy-img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  height: 400px;
-  width: 430px;
+  height: 350px;
+  width: 380x;
 }
