--- a/client/src/styles/positiveList.css
+++ b/client/src/styles/positiveList.css
@@ -22,10 +22,10 @@
     border-radius: 1.5rem;
     overflow: hidden;
     margin-bottom: 1rem;
-    color:#368f8b
+    color:#fca311
   }
   .positive__date {
-    color:#246a73;
+    color:#fca311;
   }
   .positive__item h4 {
     margin: 1.2rem 0 2rem;
